# ChangeLog for net-firewall/shorewall-shell
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.28 2009/05/15 09:17:07 pva Exp $

*shorewall-shell-4.2.8 (15 May 2009)

  15 May 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.8.ebuild:
  Version bump, bug #269578, thank Vieri for maintaining this package.

*shorewall-shell-4.2.7 (03 Apr 2009)

  03 Apr 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.7.ebuild:
  Version bump, bug #264270, thank Vieri for maintaining this package.

  20 Mar 2009; Brent Baude <ranger@gentoo.org>
  shorewall-shell-4.0.15.ebuild:
  Marking shorewall-shell-4.0.15 ppc for bug 256064

  15 Mar 2009; Brent Baude <ranger@gentoo.org>
  shorewall-shell-4.0.15.ebuild:
  Marking shorewall-shell-4.0.15 ppc64 for bug 256064

  08 Mar 2009; Markus Meier <maekke@gentoo.org>
  shorewall-shell-4.0.15.ebuild:
  amd64/x86 stable, bug #256064

  28 Feb 2009; Peter Volkov <pva@gentoo.org> -shorewall-shell-4.0.12.ebuild,
  -shorewall-shell-4.0.13.ebuild, -shorewall-shell-4.0.13.1.ebuild,
  -shorewall-shell-4.0.14.1.ebuild, shorewall-shell-4.0.15.ebuild,
  -shorewall-shell-4.2.0.ebuild, -shorewall-shell-4.2.1.ebuild:
  Removed old, bug #256064. Fixed RDEPEND repoman warning.

*shorewall-shell-4.2.6 (22 Feb 2009)

  22 Feb 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.2.6.ebuild:
  Version bump, thank Vieri for this work #257895.

*shorewall-shell-4.2.4 (22 Jan 2009)
*shorewall-shell-4.0.15 (22 Jan 2009)

  22 Jan 2009; Peter Volkov <pva@gentoo.org> +shorewall-shell-4.0.15.ebuild,
  +shorewall-shell-4.2.4.ebuild:
  Version bump, bug #255437, thank Vieri for all work.

*shorewall-shell-4.2.1 (21 Nov 2008)
*shorewall-shell-4.0.14.1 (21 Nov 2008)

  21 Nov 2008; Peter Volkov <pva@gentoo.org>
  +shorewall-shell-4.0.14.1.ebuild, +shorewall-shell-4.2.1.ebuild:
  Version bump, bug #247669 and #247670, thank Vieri for maintenance.
